--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "src/index.js",
   "scripts": {
     "test": "test",
-    "build": "rm -rf dist && webpack"
+    "start": "webpack-dev-server --mode development --open",
+    "build": "rm -rf dist && webpack",
+    "watch": "webpack --watch"
   },
   "keywords": [
     "reactjs"
@@ -26,6 +28,7 @@
     "html-webpack-plugin": "^3.2.0",
     "source-map-loader": "^0.2.4",
     "typescript": "^3.0.1",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.8"
   }
 }
